Bug fixed: Some elements at the bottom of a page can be hidden by the admin status bar
Ignore-this: e728c7aa493b7e60529ae8b20a5e8b47

darcs-hash:20120913160803-a85e5-29db67dfeeefcb26c2bf031b01fa7544625f3074

--- a/local/var/www/static/ocsiadmin.css
+++ b/local/var/www/static/ocsiadmin.css
@@ -59,7 +59,7 @@ span.admin-menu-root {
 #admin_body {
     margin-left: 240px;
     height: 80%;
-    margin-bottom: 45px;
+    margin-bottom: 5%;
 }
 
 
@@ -138,6 +138,7 @@ body.admin h1.html_page_heading {
   width:100%;
   background-color: white;
   z-index: 99;
+  height: 5%;
 }
 
 #admin_status form.logoutbutton, #admin_status form.logoutbutton div, #admin_status form.logoutbutton p {
